@@ -262,6 +262,12 @@
    #define below would cause a syntax error. */
 #undef _UINT8_T
 
+/* Alignment specifier operator */
+#undef alignas
+
+/* Alignment query operator */
+#undef alignof
+
 /* Define to `int' if <sys/types.h> doesn't define. */
 #undef gid_t
 
@@ -288,12 +294,6 @@
 /* Define to the type of a signed integer type wide enough to hold a pointer,
    if such a type exists, and if the system does not define it. */
 #undef intptr_t
-
-/* Alignment specifier operator */
-#undef openaxiom_alignas
-
-/* Alignment query operator */
-#undef openaxiom_alignment
 
 /* Define to `int' if <sys/types.h> doesn't define. */
 #undef uid_t
