@@ -49,7 +49,7 @@ namespace OpenAxiom {
    // so that an instance of it can be used directly as a VM value.
    // See <open-axiom/vm> for more description.
    template<typename T>
-   struct openaxiom_alignas(8) HashTableEntry : T {
+   struct alignas(8) HashTableEntry : T {
       HashTableEntry* chain;   // previous item in the same bucket chain
       size_t hash;             // hash code of stored data
    };
